# libfdb_c

./: .gitignore  CMakeLists.txt  Makefile  README.md  symbols.list  vcpkg.json
examples/: CMakeLists.txt  basic_rw.cpp  fdb_helper.h
extractor/: .dockerignore  Dockerfile  Makefile
extractor/workdir/: .gitignore  build-c-binding-only.patch  build-tests.sh  extract.sh  global-sym.cpp  global-sym.sh  prepare-build.sh
extractor/workdir/cmake/: fdb_c.cmake  fdbclient.cmake  fdbrpc.cmake  flow.cmake
extractor/workdir/patches/: backport-doctest.patch  build-c-binding-only.patch  fdb_c_ext.h  fix-fmt-cxx20.patch  fix-fmt-format.patch  namespace.patch  re2.patch
src/bindings/c/: CMakeLists.txt  fdb_c.actor.g.cpp
src/bindings/c/linux-aarch64/: fdb_c.g.S
src/bindings/c/linux-intel/: fdb_c.g.S  fdb_c_function_pointers.g.h
src/bindings/c/osx-aarch64/: fdb_c.g.S
src/fdbclient/: AsyncFileS3BlobStore.actor.g.cpp  AsyncFileS3BlobStore.actor.g.h  AsyncFileS3BlobStore.actor.h  AsyncTaskThread.actor.g.cpp  AuditUtils.actor.g.cpp  BackupAgent.actor.g.h  BackupAgentBase.actor.g.cpp  BackupContainer.actor.cpp  BackupContainer.actor.g.cpp  BackupContainerFileSystem.actor.g.cpp  BackupContainerLocalDirectory.actor.g.cpp  BackupContainerS3BlobStore.actor.g.cpp  BlobGranuleFiles.cpp  BlobGranuleReader.actor.cpp  BlobGranuleReader.actor.g.cpp  BlobGranuleReader.actor.g.h  CMakeLists.txt  ClusterConnectionFile.actor.g.cpp  ClusterConnectionKey.actor.g.cpp  ClusterConnectionKey.actor.g.h  ClusterConnectionMemoryRecord.actor.g.cpp  DataDistributionConfig.actor.g.cpp  DatabaseBackupAgent.actor.g.cpp  EventTypes.actor.g.h  FDBOptions.g.cpp  FDBOptions.g.h  FileBackupAgent.actor.cpp  FileBackupAgent.actor.g.cpp  GenericManagementAPI.actor.g.h  GlobalConfig.actor.g.cpp  GlobalConfig.actor.g.h  HighContentionPrefixAllocator.actor.g.h  IdempotencyId.actor.g.cpp  KeyRangeMap.actor.g.cpp  ManagementAPI.actor.cpp  ManagementAPI.actor.g.cpp  ManagementAPI.actor.g.h  MonitorLeader.actor.g.cpp  MultiVersionTransaction.actor.g.cpp  MutationLogReader.actor.g.cpp  (+24 more)
src/fdbclient/include/fdbclient/: AsyncFileS3BlobStore.actor.g.h  AsyncFileS3BlobStore.actor.h  AuditUtils.actor.g.h  BackupAgent.actor.g.h  BlobGranuleReader.actor.g.h  BlobGranuleRequest.actor.g.h  ClusterConnectionKey.actor.g.h  ConsistencyScanInterface.actor.g.h  DataDistributionConfig.actor.g.h  EventTypes.actor.g.h  FDBOptions.g.h  GenericManagementAPI.actor.g.h  GetEncryptCipherKeys_impl.actor.g.h  GlobalConfig.actor.g.h  HighContentionPrefixAllocator.actor.g.h  (+18 more)
src/fdbrpc/: ActorFuzz.actor.g.cpp  ActorFuzz.h  AsyncFileCached.actor.g.cpp  AsyncFileCached.actor.g.h  AsyncFileChaos.actor.g.h  AsyncFileEIO.actor.g.h  AsyncFileEncrypted.actor.cpp  AsyncFileEncrypted.actor.g.cpp  AsyncFileKAIO.actor.g.h  AsyncFileNonDurable.actor.g.cpp  AsyncFileNonDurable.actor.g.h  AsyncFileReadAhead.actor.g.h  AsyncFileWinASIO.actor.g.h  CMakeLists.txt  DDSketchTest.actor.g.cpp  FailureMonitor.actor.g.cpp  FlowProcess.actor.g.h  FlowTests.actor.g.cpp  FlowTransport.actor.cpp  FlowTransport.actor.g.cpp  HTTP.actor.cpp  HTTP.actor.g.cpp  HTTPServer.actor.g.cpp  HealthMonitor.actor.g.cpp  IAsyncFile.actor.g.cpp  LoadBalance.actor.g.cpp  LoadBalance.actor.g.h  SimExternalConnection.actor.g.cpp  Stats.actor.g.cpp  TokenCache.actor.g.cpp  dsltest.actor.g.cpp  genericactors.actor.g.h  networksender.actor.g.h  sim2.actor.cpp  sim2.actor.g.cpp
src/fdbrpc/include/fdbrpc/: AsyncFileCached.actor.g.h  AsyncFileEIO.actor.g.h  AsyncFileKAIO.actor.g.h  AsyncFileNonDurable.actor.g.h  AsyncFileReadAhead.actor.g.h  AsyncFileWinASIO.actor.g.h  FlowProcess.actor.g.h  LoadBalance.actor.g.h  genericactors.actor.g.h  networksender.actor.g.h
src/flow/: ActorCollection.actor.g.cpp  Arena.h  BlobCipher.h  CMakeLists.txt  CompressedInt.actor.g.cpp  Error.h  EventTypes.actor.g.h  FileTraceLogWriter.cpp  Hostname.actor.g.cpp  Hostname.h  IAsyncFile.actor.g.cpp  IRandom.h  IThreadPoolTest.actor.g.cpp  IndexedSet.actor.g.h  IndexedSet.cpp  IndexedSet.h  Net2.actor.g.cpp  Platform.actor.cpp  Platform.actor.g.cpp  Platform.actor.g.h  Profiler.actor.g.cpp  SourceVersion.h  SystemMonitor.cpp  SystemMonitor.h  TDMetric.actor.g.h  TDMetric.cpp  TLSConfig.actor.g.cpp  TLSConfig.actor.g.h  TLSTest.cpp  ThreadHelper.actor.g.cpp  ThreadHelper.actor.g.h  Trace.cpp  Tracing.actor.g.cpp  WriteOnlySet.actor.g.cpp  flow.h  genericactors.actor.g.cpp  genericactors.actor.g.h  network.h
src/flow/include/flow/: ApiVersion.h  EventTypes.actor.g.h  IndexedSet.actor.g.h  Platform.actor.g.h  PriorityMultiLock.actor.g.h  ProtocolVersion.h  SourceVersion.h  TDMetric.actor.g.h  TLSConfig.actor.g.h  ThreadHelper.actor.g.h  WatchFile.actor.g.h  genericactors.actor.g.h
